route.yaml
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: zanata-localization
    name: zanata-localization
  spec:
    port:
      targetPort: 6697-tcp
    tls:
      termination: passthrough
    to:
      kind: Service
      name: zanata-localization
      weight: 100
