zanata-mariadb-localization.yaml
apiVersion: v1
kind: Template
metadata:
  annotations:
    openshift.io/display-name: "Zanata Localization Service"
    description: "A software localization service"
    tags: "zanata,mariadb"
  creationTimestamp: null
  name: zanata-localization
objects:
- apiVersion: v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    generation: 1
    labels:
      app: zanata/server
    name: zanata-server
  spec:
    tags:
    - from:
        kind: DockerImage
        name: zanata/server
      name: latest
- apiVersion: v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    generation: 1
    labels:
      app: mariadb
    name: mariadb
  spec:
    tags:
    - from:
        kind: DockerImage
        name: mariadb
      name: latest
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: zanata-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500M
    volumeName: zanata-pv
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: zanata-db-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500M
    volumeName: zanata-db-pv
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: zanata-log-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500M
    volumeName: zanata-log-pv
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: zanata-tmp-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500M
    volumeName: zanata-tmp-pv
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: zanata-deploy-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500M
    volumeName: zanata-deploy-pv
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: zanata-config-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500M
    volumeName: zanata-config-pv
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 2
    labels:
      app: zanata-localization
    name: zanata-localization
  spec:
    replicas: 1
    selector:
      app: zanata-localization
      deploymentconfig: zanata-localization
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: zanata-localization
          deploymentconfig: zanata-localization
      spec:
        containers:
        - image: zanata/server
          imagePullPolicy: Always
          registry: zanata
          name: server
          env:
          - name: DB_PORT_3306_TCP_ADDR
            value: "localhost"
          - name: DB_ENV_MYSQL_DATABASE
            value: "zanata"
          - name: DB_ENV_MYSQL_USER
            value: "zanata"
          - name: DB_ENV_MYSQL_PASSWORD
            value: "password"
          - name: ZANATA_MYSQL_DATABASE
            value: "zanata"
          - name: ZANATA_MYSQL_USER
            value: "zanata"
          volumeMounts:
          - mountPath: "/opt/jboss/wildfly/standalone/data"
            name: zanata-volume
          - mountPath: "/opt/jboss/wildfly/standalone/log"
            name: zanata-log-volume
          - mountPath: "/opt/jboss/wildfly/standalone/tmp"
            name: zanata-tmp-volume
          - mountPath: "/opt/jboss/wildfly/standalone/deployments"
            name: zanata-deploy-volume
          ports:
          - containerPort: 6697
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
        - image: mariadb
          imagePullPolicy: Always
          name: mariadb
          env:
          - name: MYSQL_ROOT_PASSWORD
            value: "password"
          - name: MYSQL_ALLOW_EMPTY_PASSWORD
            value: "yes"
          volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: zanata-db-volume
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
        volumes:
        - name: zanata-volume
          persistentVolumeClaim:
            claimName: zanata-pvc
        - name: zanata-log-volume
          persistentVolumeClaim:
            claimName: zanata-log-pvc
        - name: zanata-tmp-volume
          persistentVolumeClaim:
            claimName: zanata-tmp-pvc
        - name: zanata-db-volume
          persistentVolumeClaim:
            claimName: zanata-db-pvc
        - name: zanata-deploy-volume
          persistentVolumeClaim:
            claimName: zanata-deploy-pvc
        - name: zanata-config-volume
          persistentVolumeClaim:
            claimName: zanata-config-pvc
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: zanata-localization
    name: zanata-localization
  spec:
    ports:
    - name: 6697-tcp
      port: 6697
      protocol: TCP
      targetPort: 6697
    selector:
      app: zanata-localization
      deploymentconfig: zanata-localization
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: zanata-localization
    name: zanata-localization
  spec:
    port:
      targetPort: 6697-tcp
    tls:
      termination: passthrough
    to:
      kind: Service
      name: zanata-localization
      weight: 100
