zanata-mariadb.yaml
apiVersion: v1
kind: Template
metadata:
  name: zanata-localization
  annotations:
    openshift.io/display-name: "Zanata Localization Service"
    description: "A software localization service"
    tags: "zanata,mariadb"
objects:
- apiVersion: v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    generation: 1
    labels:
      app: mariadb
    name: mariadb
  spec:
    tags:
    - from:
        kind: DockerImage
        name: mariadb
      name: latest
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
    creationTimestamp: null
    name: zanata-db-pvc
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 500M
    volumeName: zanata-db-pv
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: zanata-mariadb
    name: zanata-mariadb
  spec:
    ports:
    - port: 3306
    selector:
      app: zanata-mariadb
      deploymentconfig: zanata-mariadb
    type: NodePort
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 2
    labels:
      app: zanata-mariadb
    name: zanata-mariadb
  spec:
    replicas: 1
    selector:
      app: zanata-mariadb
      deploymentconfig: zanata-mariadb
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: zanata-mariadb
          deploymentconfig: zanata-mariadb
      spec:
        containers:
        - image: mariadb:10.1
          imagePullPolicy: Always
          name: mariadb
          args:
          - "--character_set_server=utf8"
          env:
          - name: MYSQL_ROOT_PASSWORD
            value: "password"
          - name: MYSQL_DATABASE
            value: "zanata"
          - name: MYSQL_USER
            value: "zanata"
          - name: MYSQL_PASSWORD
            value: "zanatapassword"
          - name: MYSQL_ALLOW_EMPTY_PASSWORD
            value: "yes"
          volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: zanata-db-volume
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
        volumes:
        - name: zanata-db-volume
          persistentVolumeClaim:
            claimName: zanata-db-pvc
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
